syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option csharp_namespace = "CareerCloud.gRPC.Protos";

service ApplicantJobApplication{
	rpc GetApplicantJobApplication(ApplicantJobApplicationIdRequest) returns (ApplicantJobApplicationReply); 
	rpc GetAllApplicantJobApplication(google.protobuf.Empty) returns (ApplicantJobApplicationList); 
	rpc AddApplicantJobApplication(ApplicantJobApplicationList) returns (google.protobuf.Empty); 
	rpc UpdateApplicantJobApplication(ApplicantJobApplicationList) returns (google.protobuf.Empty); 
	rpc DeleteApplicantJobApplication(ApplicantJobApplicationList) returns (google.protobuf.Empty); 
}

message ApplicantJobApplicationIdRequest{
	string Id = 1;
}

message ApplicantJobApplicationReply{
	string Id = 1;
	string Applicant = 2;
	string Job = 3;
	google.protobuf.Timestamp ApplicationDate = 4;
	bytes Timestamp = 5; 
}

message ApplicantJobApplicationList{
	repeated ApplicantJobApplicationReply AppJobApps = 1;
}
